# lazycommit_cz_plugin

./: .cz.toml  .gitignore  CHANGELOG.md  README.md  dev.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yml
